# utilc-data-structures

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  utilc-data-structures-example.c
include/: singly-linked-list.h  utilc-data-structures.h
src/: CMakeLists.txt  utilc-data-structures.c
tests/: CMakeLists.txt  test-utilc-data-structures.c
