enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} utilc-data-structures)
include_directories(. ../include)
add_executable(test-utilc-data-structures test-utilc-data-structures.c)
target_link_libraries(test-utilc-data-structures ${LIBS})
add_test(test-utilc-data-structures ${CMAKE_CURRENT_BINARY_DIR}/test-utilc-data-structures)
